@@ -2687,7 +2687,7 @@ CD, JBIG, or JPEG.</font></td>
 
 <td><font size=-1>void</font></td>
 
-<td><font size=-1>unsigned int strokeDashOffset_</font></td>
+<td><font size=-1>double strokeDashOffset_</font></td>
 
 <td><font size=-1>While drawing using a dash pattern, specify distance
 into the dash pattern to start the dash (default 0).</font></td>
@@ -2698,11 +2698,11 @@ into the dash pattern to start the dash (default 0).</font></td>
 <center><a NAME="strokeDashArray"></a><font size=-1>strokeDashArray</font></center>
 </td>
 
-<td><font size=-1>const unsigned int*</font></td>
+<td><font size=-1>const double*</font></td>
 
 <td><font size=-1>void</font></td>
 
-<td><font size=-1>const unsigned int* strokeDashArray_</font></td>
+<td><font size=-1>const double* strokeDashArray_</font></td>
 
 <td><font size=-1>Specify the pattern of dashes and gaps used to stroke
 paths. The strokeDashArray represents a zero-terminated array of numbers
